# plare

./: LICENSE  README.md  pyproject.toml  setup.py
.claude/: HANDOFF.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
examples/calc/: README.md  calc.py
examples/calc/data/: ex01.calc  ex02.calc  ex03.calc  ex04.calc  ex05.calc  ex06.calc  ex07.calc
examples/sum_of_list/: README.md  sum.py
plare/: __init__.py  exception.py  lexer.py  parser.py  token.py  utils.py
plare/lang/: __init__.py  tree.py  type.py
plare/lexer/: __init__.py  exception.py  lexer.py  token.py
plare/parser/: __init__.py  automata.py  exception.py  parser.py  rule.py  table.py
pypar/: __init__.py
pypar/lang/: __init__.py  tree.py  type.py
pypar/lexer/: __init__.py  exception.py  lexer.py
pypar/parser/: __init__.py  automata.py  exception.py  parser.py  rule.py  table.py
tests/: test_determinism.py  test_error_reporting.py  test_first_follow.py  test_grammar_logic.py  test_hash_semantics.py  test_integration.py  test_lexer.py  test_lexer_advanced.py  test_parser.py  test_parser_safety_net.py  test_prec_override.py
tutorial/: README.md  calc.py
tutorial/examples/: ex02.calc  ex03.calc  ex04.calc  ex06.calc
